--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,9 @@ $color--gray--darker:   #8c8c8c;
 $color--blue:           #0178be;
 $color--orange:         #f26522;
 $color--green:          #66952e;
+$txt-color: #262626;
+$lnk-color: #0178be;
+$lnk-hover-color: #0C65B1;
 
 $line-height-main: 1.5;
 $button-primary-color: #fff;
