--- a/src/scss/ask_questions.scss
+++ b/src/scss/ask_questions.scss
@@ -1,5 +1,4 @@
 @import "variables";
-@import "bootstrap-custom";
 
 $contact-section-background: #1E1E1E;
 $contact-section-color: rgba(255, 255, 255, 0.5);
@@ -55,7 +54,7 @@ $contact-section-border: rgba(255, 255, 255, 0.5);
     box-shadow: 1px 0 0 0 rgba(255, 255, 255, 0.12);
     color: white;
     font-size: 16px;
-    margin-left: -$grid-gutter-width;
+    margin-left: -16px;
     min-height: 320px;
     padding-top: 43px;
     text-align: left;
