--- a/src/scss/sportsmens.scss
+++ b/src/scss/sportsmens.scss
@@ -29,6 +29,7 @@
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     padding-left: 24px;
+    padding-right: 24px;
   }
 
   .sportsmens_modal-biography {
