--- a/src/scss/platform_description_section.scss
+++ b/src/scss/platform_description_section.scss
@@ -15,19 +15,34 @@ $border-color-primary: #E6E6E6;
   &-container {
     padding: {
       top: 56px;
-    };
+    }
+  ;
   }
 
   li {
     border-right: solid 1px $border-color-primary;
-    color: rgba(0,0,0,0.3);
+    color: rgba(0, 0, 0, 0.3);
     font-size: 24px;
     height: 64px;
-    padding: 16px 24px;
+    padding: 16px 0;
+    text-align: center;
 
     &:first-child {
-      border-left:solid 1px $border-color-primary;
+      border-left: solid 1px $border-color-primary;
       margin-left: 8px;
+    }
+
+    &:nth-child(1) {
+      width: 216px;
+    }
+    &:nth-child(2) {
+      width: 127px;
+    }
+    &:nth-child(3) {
+      width: 127px;
+    }
+    &:nth-child(4) {
+      width: 144px;
     }
 
     &.current {
@@ -39,9 +54,10 @@ $border-color-primary: #E6E6E6;
   &-content {
     min-height: 372px;
     padding: {
-      top: 56px;
+      top: 52px;
       left: 16px;
-    };
+    }
+  ;
 
     p {
       margin: 0 0 24px;
@@ -49,26 +65,57 @@ $border-color-primary: #E6E6E6;
   }
 }
 
+.description_image {
+  display: flex;
+  align-items: center;
+  height: 584px;
+  position: relative;
+
+  img {
+    width: auto;
+
+    &:nth-child(1) {
+      height: 510px;
+    }
+
+    &:nth-child(2),
+    &:nth-child(3),
+    &:nth-child(4) {
+      height: auto;
+      width: 100%;
+    }
+  }
+}
+
 // GENERAL TABS
-ul.tabs{
+ul.tabs {
   margin: 0px;
   padding: 0px;
   list-style: none;
 }
-ul.tabs li{
+
+ul.tabs li {
   background: none;
   display: inline-block;
   cursor: pointer;
 }
 
-ul.tabs li.current{
+ul.tabs li.current {
 
 }
 
-.tab-content{
+.tab-content {
   display: none;
 }
 
-.tab-content.current{
+.tab-content.current {
   display: inherit;
+}
+
+.tab-image {
+  display: none;
+
+  &.current {
+    display: inherit;
+  }
 }
