--- a/src/scss/platform_description_section.scss
+++ b/src/scss/platform_description_section.scss
@@ -15,8 +15,7 @@ $border-color-primary: #E6E6E6;
   &-container {
     padding: {
       top: 56px;
-    }
-  ;
+    };
   }
 
   li {
@@ -47,12 +46,15 @@ $border-color-primary: #E6E6E6;
 
     &.current {
       color: $color--blue;
+      font-family: glober-bold, sans-serif;
       font-weight: bold;
     }
   }
 
   &-content {
     min-height: 372px;
+    font-size: 16px;
+    line-height: 24px;
     padding: {
       top: 52px;
       left: 16px;
