--- a/src/scss/software.scss
+++ b/src/scss/software.scss
@@ -39,5 +39,42 @@
 @media screen and (max-width: 678px) {
   .software_section {
 
+    &-height {
+      height: auto!important;
+      margin-left: 24px!important;
+      margin-right: 24px!important;
+      margin-top: 24px!important;
+    }
+.software-macbook {
+  position: relative;
+  margin-left: 0;
+  img {
+    height: 218px;
+    margin-left: 24px;
+    margin-top: 26px;
+  }
+}
+    .software-margin {
+      margin-bottom: 24px;
+
+    }
+    .software-button {
+      margin-top: 0px;
+      width:100%;
+    }
+    .visit-product-page {
+      margin-top: -41px;
+      padding-top: 56px;
+      padding-left: 24px;
+    }
+    .contact_section-left {
+      box-shadow: 0 1px 0 0 rgba(255,255,255,0.12), 0 0 0 0 rgba(255,255,255,0.12);
+      padding-left: 24px;
+      padding-top: 35px;
+      padding-bottom: 31px;
+      margin-left: -8px;
+      margin-right: -8px;
+      padding-right: 24px;
+    }
   }
 }
