--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -143,12 +143,15 @@
     }
 
     .main-menu {
+      background: #ffffff;
       display: none;
       position: fixed;
       bottom: 8px;
       border-radius: 4px;
-      left: 8px;
-      right: 8px;
+      left: 0;
+      overflow: hidden;
+      margin-left: 8px;
+      margin-right: 8px;
       width: 100%;
 
       //&-overlay  {
