--- a/src/scss/platform_slider.scss
+++ b/src/scss/platform_slider.scss
@@ -5,7 +5,8 @@
   background: url("../src/image/platform_slide.jpg") no-repeat bottom;
   background-size: cover;
   display: flex;
-  min-height: 600px;position: relative;
+  min-height: 612px;
+  position: relative;
   padding-bottom: 72px;
 }
 
