--- a/src/scss/testimonial.scss
+++ b/src/scss/testimonial.scss
@@ -30,16 +30,6 @@
   }
 
   .testimonial1-background {
-    background-image: url(../src/image/testimponial1.jpg);
-    min-height: 240px;
-    min-width: 272px;
-    //padding-top: 3%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-
-  .testimonial2-background {
     background-image: url(../src/image/testimonial2.jpg);
     min-height: 240px;
     min-width: 272px;
@@ -49,8 +39,18 @@
     background-position: center;
   }
 
+  .testimonial2-background {
+    background-image: url(../src/image/b1.jpg);
+    min-height: 240px;
+    min-width: 272px;
+    //padding-top: 3%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .testimonial3-background {
-    background-image: url(../src/image/testemonial3.jpg);
+    background-image: url("../src/image/WH1.jpg");
     min-height: 240px;
     min-width: 272px;
     //padding-top: 3%;
@@ -60,7 +60,7 @@
   }
 
   .testimonial4-background {
-    background-image: url(../src/image/testimonial4.jpg);
+    background-image: url("../src/image/WH2.JPG");
     min-height: 240px;
     min-width: 272px;
     //padding-top: 3%;
