--- a/src/scss/platform_slider.scss
+++ b/src/scss/platform_slider.scss
@@ -71,6 +71,7 @@
     padding: 24px;
     min-height: 1px;
     height: 100vh;
+    align-items: end;
 
     .button--primary {
       max-width: 100%;
@@ -78,8 +79,13 @@
   }
 
   .slider_content {
+    margin: 0;
     h3 {
       font-size: 18px;
+    }
+
+    &-top {
+      padding: 20px;
     }
   }
 
