--- a/src/scss/platform_description_section.scss
+++ b/src/scss/platform_description_section.scss
@@ -4,7 +4,7 @@ $border-color-primary: #E6E6E6;
 
 .description_section {
   overflow: hidden;
-  min-height: 584px;
+  min-height: 600px;
 
   .description_button {
     position: absolute;
@@ -17,8 +17,14 @@ $border-color-primary: #E6E6E6;
 
   &-container {
     padding: {
-      top: 56px;
+      top: 48px;
     };
+
+    h2 {
+      color: $color--blue;
+      margin: 0 8px 24px;
+      padding: 0;
+    }
   }
 
   li {
@@ -55,12 +61,12 @@ $border-color-primary: #E6E6E6;
   }
 
   &-content {
-    min-height: 412px;
+    min-height: 384px;
     font-size: 16px;
     line-height: 24px;
     position: relative;
     padding: {
-      top: 52px;
+      top: 32px;
       left: 16px;
     };
 
@@ -77,7 +83,7 @@ $border-color-primary: #E6E6E6;
 .description_image {
   display: flex;
   align-items: center;
-  height: 584px;
+  height: 600px;
   position: relative;
 
   img {
