--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -102,7 +102,7 @@
     font-size: 16px;
     height: 48px;
     min-height: 1px!important;
-    padding: 14px 0 0 40px!important;
+    padding: 14px 16px 0 32px!important;
     margin: 0;
 
     &.active {
