--- a/src/scss/platform_description_section.scss
+++ b/src/scss/platform_description_section.scss
@@ -90,11 +90,15 @@ $border-color-primary: #E6E6E6;
     width: auto;
 
     &:nth-child(2) {
-      height: 510px;
+      height: 410px;
+    }
+
+    &:nth-child(3) {
+      height: 420px;
+      margin-left: auto;
     }
 
     &:nth-child(1),
-    &:nth-child(3),
     &:nth-child(4) {
       height: auto;
       width: 100%;
