--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -131,6 +131,7 @@
   height: 48px;
   width: 48px!important;
   background-color: #FFFFFF!important;
+  border: none;
   box-shadow: -1px 4px 4px 0 rgba(0, 0, 0, 0.2);
   border-radius: 24px;
   left: auto;
