--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -37,3 +37,73 @@
     border: 1px solid #E6E6E6;
   }
 }
+.modal-width {
+  max-width: 752px;
+  width: 100%;
+}
+
+.sportsmen_modal-header {
+  background-color: #F5F5F5;
+  height: 72px;
+  color: #0C65B1;
+  line-height: 36px;
+  font-size: 25px;
+  padding-top: 21px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.sportsmens_modal-biography {
+  color: #333333;
+  margin-top: 18px;
+  margin-right: 24px;
+  margin-left: 24px;
+  margin-bottom: 18px;
+}
+
+.close-popup {
+  margin-top: 2px!important;
+  background: url("../src/icon/x.svg") no-repeat center!important;
+  height: 24px;
+  width: 24px;
+  &:hover {
+    background: url("../src/icon/x_b.svg") no-repeat center!important;
+  }
+}
+
+.close-video-popup {
+  background: url("../src/icon/x.svg") no-repeat center!important;
+
+  right: 8px;
+  height: 48px;
+  width: 48px!important;
+  background-color: #FFFFFF!important;
+  border: none;
+  box-shadow: -1px 4px 4px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 24px;
+  left: auto;
+  filter: none;
+  opacity: 1;
+  margin-right: -16px;
+  &:hover {
+    background: url("../src/icon/x_b.svg") no-repeat center!important;
+    background-color: #FFFFFF!important;
+    filter: none;
+    opacity: 1;
+    border: 1px solid #E6E6E6!important;
+  }
+}
+
+
+
+.modal-center {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top:0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
