--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -180,11 +180,24 @@
 
 }
 
-@media screen and (max-width: 678px) {
+.close_menu {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
 
   .logo {
     margin-left: 8px;
     margin-top: 12px;
+  }
+
+  .close_menu {
+    display: inherit;
+    text-align: center;
+
+    a {
+      color: $color--gray--darker!important;
+    }
   }
 
   .menu_right {
@@ -203,25 +216,30 @@
     }
 
     .main-menu {
-      background: #ffffff;
       display: none;
-      position: fixed;
-      bottom: 8px;
-      border-radius: 4px;
-      left: 0;
-      overflow: hidden;
-      margin-left: 8px;
-      margin-right: 8px;
-      width: 100%;
 
-      //&-overlay  {
-      //  position: fixed;
-      //  top: 0;
-      //  left: 0;
-      //  right: 0;
-      //  bottom: 0;
-      //  background: #d2d;
-      //}
+      &-overlay  {
+        overflow-y: auto;
+        position: fixed;
+        display: flex;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.45);
+        z-index: 99;
+      }
+
+      ul.main_nav {
+        flex: 1;
+        align-self: flex-end;
+        background: #ffffff;
+        border-radius: 4px;
+        margin: 8px;
+        max-height: 95vh;
+        overflow-y: auto;
+        z-index: 100;
+      }
 
       &-item {
 
