--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -107,3 +107,44 @@
   left: 0;
   bottom: 0;
 }
+
+.modal-hod {
+  max-width: 400px;
+  margin: 0 auto;
+  textarea {
+    height: 48px!important;
+  }
+  input {
+    height: 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+.modal-hod {
+  &-button {
+    max-height: 48px;
+    margin-bottom: 0!important;
+  }
+  .h4 {
+    font-size: 16px;
+    margin-left: 8px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+}
+  .modal-body {
+    padding-bottom: 8px!important;
+  }
+  .modal-width {
+    width: 100%!important;
+    max-width: 480px!important;
+    margin: auto!important;
+  }
+  .modal-center {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+  .modal-title {
+    font-size: 18px;
+  }
+}
