--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -175,13 +175,13 @@
         }
       }
 
+      &.close_menu {
+        display: none;
+      }
+
     }
   }
 
-}
-
-.close_menu {
-  display: none;
 }
 
 @media screen and (max-width: 768px) {
@@ -192,7 +192,7 @@
   }
 
   .close_menu {
-    display: inherit;
+    display: inherit!important;
     text-align: center;
 
     a {
