--- a/src/scss/platform_slider.scss
+++ b/src/scss/platform_slider.scss
@@ -71,7 +71,7 @@
     padding: 16px;
     min-height: 1px;
     height: 100vh;
-    align-items: end;
+    align-items: flex-end;
 
     .button--primary {
       max-width: 100%;
