--- a/src/scss/partners.scss
+++ b/src/scss/partners.scss
@@ -26,3 +26,14 @@
     }
   }
 }
+
+
+@media screen and (max-width: 768px) {
+  .partners_container {
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    img {
+      min-width: 201px;
+    }
+  }
+}
