--- a/src/scss/platform_description_section.scss
+++ b/src/scss/platform_description_section.scss
@@ -142,3 +142,30 @@ ul.tabs li.current {
     display: inherit;
   }
 }
+@media screen and (max-width: 767px) {
+  .description_section {
+    .description_tabs-content{
+      padding-right: 16px;
+      padding-bottom: 24px;
+      font-size: 14px;
+      line-height: 21px;
+    }
+    .description_button {
+    position: unset;
+      margin-top: 33px;
+    }
+    .description_column-reverse {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+    .description_image {
+      height: auto;
+      margin-top: 15px;
+      img {
+        max-height: 176px;
+        width: auto;
+        margin: auto;
+      }
+    }
+  }
+}
