--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -167,7 +167,7 @@
         box-shadow: -1px 0 0 0 rgba(0, 0, 0, 0.45);
 
         a {
-          background: #ffffff!important;
+          background: transparent!important;
         }
 
         .main-menu-dropdown-item {
