--- a/src/scss/platform_slider.scss
+++ b/src/scss/platform_slider.scss
@@ -2,7 +2,7 @@
 
 
 .platform_slide {
-  background: url("../src/image/platform_slide.jpg") no-repeat bottom;
+  background: url("../src/image/main_temp.png") no-repeat bottom;
   background-size: cover;
   display: flex;
   min-height: 612px;
