--- a/src/scss/platform_reilly_section.scss
+++ b/src/scss/platform_reilly_section.scss
@@ -54,3 +54,10 @@
     }
   }
 }
+
+@media screen and (max-width: 991px) {
+  .reilly_about {
+    font-size: 14px;
+    padding: 50px 24px 0 24px;
+  }
+}
