--- a/src/scss/partners.scss
+++ b/src/scss/partners.scss
@@ -37,3 +37,10 @@
     }
   }
 }
+
+@media screen and (max-width: 991px) {
+  .partners_container {
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+  }
+}
