--- a/src/scss/starteam.scss
+++ b/src/scss/starteam.scss
@@ -54,3 +54,14 @@
     max-width: 265px
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .star_team_section {
+    .star_title {
+      margin-right: 24px;
+    }
+    .sportsmens_biography {
+      margin-top: 16px;
+    }
+  }
+}
