--- a/src/scss/ask_questions.scss
+++ b/src/scss/ask_questions.scss
@@ -176,12 +176,9 @@ $contact-section-border: rgba(255, 255, 255, 0.5);
     }
   }
   .contact_section-right {
-    padding-top: 35px;
-    padding-left: 24px;
-    padding-right: 8px;
+    padding: 35px 8px 16px 24px;
     box-shadow: none;
     min-height: 264px;
-    padding-bottom: 16px;
   }
 
   .contacts {
@@ -209,7 +206,7 @@ $contact-section-border: rgba(255, 255, 255, 0.5);
   }
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 991px) and (min-width: 769px){
   .contact_section {
     &-left {
       h3 {
