--- a/src/scss/platform_slider.scss
+++ b/src/scss/platform_slider.scss
@@ -2,7 +2,7 @@
 
 
 .platform_slide {
-  background: url("../src/image/main_temp.png") no-repeat bottom;
+  background: url("../src/image/The%20Priory%20school.jpg") no-repeat bottom;
   background-size: cover;
   display: flex;
   min-height: 612px;
@@ -49,7 +49,8 @@
     }
 
     a {
-      color: rgba(0,0,0,0.45);
+      color: #0178be;
+
     }
   }
 }
