page to send email

--- a/src/scss/platform_slider.scss
+++ b/src/scss/platform_slider.scss
@@ -2,7 +2,7 @@
 
 
 .platform_slide {
-  background: url("../src/image/The%20Priory%20school.jpg") no-repeat bottom;
+  background: url("../src/image/The%20Priory%20school.jpg") no-repeat top;
   background-size: cover;
   display: flex;
   min-height: 612px;
