--- a/src/scss/testimonial.scss
+++ b/src/scss/testimonial.scss
@@ -1,9 +1,9 @@
 @import "variables";
 
 .testimonial_section {
-  //.carousel-inner> .item.next , .carousel-inner > .item.active.right{ transform: translate3d(0, 100%, 0); -webkit-transform: translate3d(0, 100%, 0); -ms-transform: translate3d(0, 100%, 0); -moz-transform: translate3d(0, 100%, 0); -o-transform: translate3d(0, 100%, 0); top: 0;}
-  //.carousel-inner > .item.prev ,.carousel-inner > .item.active.left{ transform: translate3d(0,-100%, 0); -webkit-transform: translate3d(0,-100%, 0); -moz-transform: translate3d(0,-100%, 0);-ms-transform: translate3d(0,-100%, 0); -o-transform: translate3d(0,-100%, 0); top: 0;}
-  //.carousel-inner > .item.next.left , .carousel-inner > .item.prev.right , .carousel-inner > .item.active{transform:translate3d(0,0,0); -webkit-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);; -moz-transform:translate3d(0,0,0); -o-transform:translate3d(0,0,0); top:0;}
+  .carousel-inner> .item.next , .carousel-inner > .item.active.right{ transform: translate3d(0, 100%, 0); -webkit-transform: translate3d(0, 100%, 0); -ms-transform: translate3d(0, 100%, 0); -moz-transform: translate3d(0, 100%, 0); -o-transform: translate3d(0, 100%, 0); top: 0;}
+  .carousel-inner > .item.prev ,.carousel-inner > .item.active.left{ transform: translate3d(0,-100%, 0); -webkit-transform: translate3d(0,-100%, 0); -moz-transform: translate3d(0,-100%, 0);-ms-transform: translate3d(0,-100%, 0); -o-transform: translate3d(0,-100%, 0); top: 0;}
+  .carousel-inner > .item.next.left , .carousel-inner > .item.prev.right , .carousel-inner > .item.active{transform:translate3d(0,0,0); -webkit-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);; -moz-transform:translate3d(0,0,0); -o-transform:translate3d(0,0,0); top:0;}
 
   .testimonials-title {
     color: rgb(0,122,191);
@@ -49,6 +49,38 @@
   .testimonial-picture-padding {
     padding-left: 0;
     height: 240px;
+  }
+
+  .carousel-control {
+    //position: relative;
+    &.right {
+      opacity: unset;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.0001) 0%, rgba(255, 255, 255, 0.9) 100%);
+      bottom: 0;
+      left: 0;
+      top: auto;
+      width: 100%;
+      &:hover {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.0001) 0%, rgba(255, 255, 255, 0.3) 100%);
+        .testimonials-button-background {
+          background-image: url(../src/icon/right_sport_b.svg);
+        }
+      }
+    }
+  }
+
+  .testimonials-button-background {
+    -webkit-transform: rotate(90deg);
+    background-image: url(../src/icon/bottom_test_ld.svg);
+    height: 53px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    width: 80px;
+    display: inline-block;
+    &:hover {
+      background-image: url(../src/icon/bottom_test_b.svg);
+    }
   }
 
   .testimonial1-background {
