--- a/src/scss/sportsmens.scss
+++ b/src/scss/sportsmens.scss
@@ -51,20 +51,22 @@
 
       > .item{
         transition: 500ms ease-in-out left;
+
       }
       .active{
         &.left{
-          left:-33%;
+          left:-25%;
         }
         &.right{
-          left:33%;
+          left:25%;
         }
       }
       .next{
-        left: 33%;
+        left: 25%;
+
       }
       .prev{
-        left: -33%;
+        left: -245;
       }
       @media all and (transform-3d), (-webkit-transform-3d) {
         > .item{
